--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name: Win32-Process
 abstract: Create and manipulate processes
-version: 0.15
+version: 0.16
 author:
   - Jan Dubois <jand@activestate.com>
 license: perl
@@ -9,7 +9,7 @@ requires:
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-  homepage: http://code.google.com/p/libwin32/
+  repository: https://github.com/jandubois/win32-process
 meta-spec:
    version: 1.3
    url: http://module-build.sourceforge.net/META-spec-v1.3.html
